data/all_generated_tests/raw_wast_tests/nop_ImproperFunctionCallorReturnHandling_591.wast
;; 2. **Test Name: No-Operation Within Function Call Arguments**    - **Description**: Insert `nop` instructions within a sequence of stack operations preparing arguments for a function call.    - **Constraint**: Confirm that `nop` does not alter the arguments passed to the function.    - **Improper Handling Check**: The test ensures `nop` insertion does not modify function call argument preparation.    - **Expected Behavior**: Both implementations should produce the same arguments for the function call despite `nop` presence.

(assert_invalid
  (module 
    (func $test 
      (param i32 i32) 
      (result i32) 
      (local.get 0) 
      (nop) 
      (local.get 1) 
      (nop) 
      (i32.add)
    )
  )
  "type mismatch"
)